// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PINEnter Screen PIN Enter renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "#000000",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
      keyboardShouldPersistTaps="handled"
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "padding": 16,
              },
              undefined,
            ]
          }
        >
          <View>
            <View
              accessibilityState={
                Object {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                Object {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="com.ariesbifold:id/DeveloperCounter"
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 26,
                      "fontWeight": "bold",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 16,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.Title
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 16,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.SubText
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  Object {
                    "marginBottom": 16,
                  },
                ]
              }
            >
              PINEnter.EnterPIN
            </Text>
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "marginBottom": 24,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#313132",
                    "borderColor": "#FFFFFFFF",
                    "borderRadius": 5,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "paddingHorizontal": 12,
                    "paddingVertical": 4,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                        Object {
                          "alignItems": "center",
                          "justifyContent": "flex-start",
                        },
                      ]
                    }
                  >
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <TextInput
                      accessibilityLabel="PINCreate.Masked"
                      accessibilityRole="text"
                      accessible={true}
                      autoCapitalize="characters"
                      autoCorrect={false}
                      autoFocus={true}
                      blurOnSubmit={false}
                      caretHidden={true}
                      clearButtonMode="never"
                      disableFullscreenUI={true}
                      keyboardType="number-pad"
                      maxLength={11}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onPressOut={[Function]}
                      onSubmitEditing={[Function]}
                      spellCheck={false}
                      style={
                        Object {
                          "bottom": 0,
                          "fontSize": 1,
                          "left": 0,
                          "opacity": 0.015,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                      testID="com.ariesbifold:id/EnterPIN"
                      textContentType="password"
                      underlineColorAndroid="transparent"
                      value=""
                    />
                  </View>
                </View>
                <View
                  accessibilityLabel="PINCreate.Show"
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                      "paddingLeft": 10,
                    }
                  }
                  testID="com.ariesbifold:id/Show"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <Text
              accessibilityLabel="PINEnter.ForgotPINLink"
              accessibilityRole="link"
              accessible={true}
              maxFontSizeMultiplier={2}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  Object {
                    "color": "#42803E",
                    "fontSize": 20,
                    "textAlign": "left",
                  },
                ]
              }
              testID="com.ariesbifold:id/ForgotPINLink"
            >
              PINEnter.ForgotPINLink
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "gap": 16,
                },
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                undefined,
              ],
              Object {
                "marginTop": "auto",
              },
            ]
          }
        >
          <View
            accessibilityLabel="PINEnter.Unlock"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#42803E",
                "borderRadius": 4,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/Enter"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                PINEnter.Unlock
              </Text>
            </View>
          </View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 14,
                  "marginTop": 8,
                  "textAlign": "center",
                },
              ]
            }
            testID="com.ariesbifold:id/Version"
          >
            Settings.Version 1 Settings.Build (1)
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaView>
`;

exports[`PINEnter Screen PIN Enter renders correctly when logged out message is present 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "#000000",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
      keyboardShouldPersistTaps="handled"
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "padding": 16,
              },
              undefined,
            ]
          }
        >
          <View>
            <View
              accessibilityState={
                Object {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                Object {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="com.ariesbifold:id/DeveloperCounter"
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 16,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.LockedOut
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 16,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.ReEnterPIN
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  Object {
                    "marginBottom": 16,
                  },
                ]
              }
            >
              PINEnter.EnterPIN
            </Text>
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "marginBottom": 24,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#313132",
                    "borderColor": "#FFFFFFFF",
                    "borderRadius": 5,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "paddingHorizontal": 12,
                    "paddingVertical": 4,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                        Object {
                          "alignItems": "center",
                          "justifyContent": "flex-start",
                        },
                      ]
                    }
                  >
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <TextInput
                      accessibilityLabel="PINCreate.Masked"
                      accessibilityRole="text"
                      accessible={true}
                      autoCapitalize="characters"
                      autoCorrect={false}
                      autoFocus={true}
                      blurOnSubmit={false}
                      caretHidden={true}
                      clearButtonMode="never"
                      disableFullscreenUI={true}
                      keyboardType="number-pad"
                      maxLength={11}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onPressOut={[Function]}
                      onSubmitEditing={[Function]}
                      spellCheck={false}
                      style={
                        Object {
                          "bottom": 0,
                          "fontSize": 1,
                          "left": 0,
                          "opacity": 0.015,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                      testID="com.ariesbifold:id/EnterPIN"
                      textContentType="password"
                      underlineColorAndroid="transparent"
                      value=""
                    />
                  </View>
                </View>
                <View
                  accessibilityLabel="PINCreate.Show"
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                      "paddingLeft": 10,
                    }
                  }
                  testID="com.ariesbifold:id/Show"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <Text
              accessibilityLabel="PINEnter.ForgotPINLink"
              accessibilityRole="link"
              accessible={true}
              maxFontSizeMultiplier={2}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  Object {
                    "color": "#42803E",
                    "fontSize": 20,
                    "textAlign": "left",
                  },
                ]
              }
              testID="com.ariesbifold:id/ForgotPINLink"
            >
              PINEnter.ForgotPINLink
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "gap": 16,
                },
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                undefined,
              ],
              Object {
                "marginTop": "auto",
              },
            ]
          }
        >
          <View
            accessibilityLabel="PINEnter.Unlock"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#42803E",
                "borderRadius": 4,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/Enter"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                PINEnter.Unlock
              </Text>
            </View>
          </View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 14,
                  "marginTop": 8,
                  "textAlign": "center",
                },
              ]
            }
            testID="com.ariesbifold:id/Version"
          >
            Settings.Version 1 Settings.Build (1)
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaView>
`;
